unpackaged/main/default/objects/Account/fields/Headquarter__c.field-meta.xml
<CustomField>
    <fullName>Headquarter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Headquarter</label>
    <type>Checkbox</type>
</CustomField>