unpackaged/main/default/objects/Account/fields/Impartner_Partner_Level__c.field-meta.xml
<CustomField>
    <fullName>Impartner_Partner_Level__c</fullName>
    <inlineHelpText>Manage by Admi</inlineHelpText>
    <label>Impartner Partner Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>ISV</fullName>
            </value>
            <value>
                <fullName>Integrator</fullName>
            </value>
            <value>
                <fullName>TechnologyPartner</fullName>
                <label>Technology partner</label>
            </value>
            <value>
                <fullName>BPO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>