unpackaged/main/default/objects/Account/fields/Industry_Code__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Industry Code</label>
    <referenceTo>Industry__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>