unpackaged/main/default/objects/Account/fields/Industry_Code_External__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code_External__c</fullName>
    <description>Industry code tel que récupéré d'un système externe (Infolégale pour la France)</description>
    <label>Industry Code External</label>
    <length>40</length>
    <type>Text</type>
</CustomField>