unpackaged/main/default/objects/Account/fields/Industry_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code_Text__c</fullName>
    <formula>Industry_Code__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Code Text</label>
    <type>Text</type>
</CustomField>