unpackaged/main/default/objects/Account/fields/Industry_Label__c.field-meta.xml
<CustomField>
    <fullName>Industry_Label__c</fullName>
    <formula>Industry_Code__r.Industry_Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Label</label>
    <type>Text</type>
</CustomField>