unpackaged/main/default/objects/Account/fields/Invoice_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Company_Name__c</fullName>
    <label>Invoice Company Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>