unpackaged/main/default/objects/Account/fields/Invoice_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Postal_Code__c</fullName>
    <label>Invoice Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>