unpackaged/main/default/objects/Account/fields/Invoice_Sending_Mode__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Sending_Mode__c</fullName>
    <label>Invoice Sending Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Paper (router)</fullName>
                <default>true</default>
                <label>Paper (router)</label>
            </value>
            <value>
                <fullName>Chorus</fullName>
            </value>
            <value>
                <fullName>ADV Print</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>