unpackaged/main/default/objects/Account/fields/Invoice_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Invoice_State_Province__c</fullName>
    <label>Invoice State/Province</label>
    <length>40</length>
    <type>Text</type>
</CustomField>