unpackaged/main/default/objects/Account/fields/Invoice_Street__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Street__c</fullName>
    <label>Invoice Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>