unpackaged/main/default/objects/Account/fields/IsOwnerInRightTerritory__c.field-meta.xml
<CustomField>
    <fullName>IsOwnerInRightTerritory__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsOwnerInRightTerritory</label>
    <type>Checkbox</type>
</CustomField>