unpackaged/main/default/objects/Account/fields/Key_contact_commitment_client_relations__c.field-meta.xml
<CustomField>
    <fullName>Key_contact_commitment_client_relations__c</fullName>
    <label>Key contact commitment, client relations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mood</valueSetName>
    </valueSet>
</CustomField>