unpackaged/main/default/objects/Account/fields/Learning__c.field-meta.xml
<CustomField>
    <fullName>Learning__c</fullName>
    <label>Learning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mood</valueSetName>
    </valueSet>
</CustomField>