unpackaged/main/default/objects/Account/fields/Main_Partner__c.field-meta.xml
<CustomField>
    <fullName>Main_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type__c</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts as Main Partner</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>