unpackaged/main/default/objects/Account/fields/Maturity_Level__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Level__c</fullName>
    <label>Maturity Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avant-garde</fullName>
            </value>
            <value>
                <fullName>Modern / Ex modern</fullName>
            </value>
            <value>
                <fullName>Traditional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>