unpackaged/main/default/objects/Account/fields/Mkto_account_owner_job_title__c.field-meta.xml
<CustomField>
    <fullName>Mkto_account_owner_job_title__c</fullName>
    <formula>Owner.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Job Title</label>
    <type>Text</type>
</CustomField>