unpackaged/main/default/objects/Account/fields/Mkto_account_owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mkto_account_owner_Phone__c</fullName>
    <formula>Owner.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Phone Number</label>
    <type>Text</type>
</CustomField>