unpackaged/main/default/objects/Account/fields/Mkto_account_owner_Profile__c.field-meta.xml
<CustomField>
    <fullName>Mkto_account_owner_Profile__c</fullName>
    <formula>Owner.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Profile</label>
    <type>Text</type>
</CustomField>