unpackaged/main/default/objects/Account/fields/Mkto_account_owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Mkto_account_owner_Role__c</fullName>
    <formula>Owner.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Role</label>
    <type>Text</type>
</CustomField>