unpackaged/main/default/objects/Account/fields/NAF_3_Code__c.field-meta.xml
<CustomField>
    <fullName>NAF_3_Code__c</fullName>
    <formula>Industry_Code__r.NAF_3__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NAF 3 Code</label>
    <type>Text</type>
</CustomField>