unpackaged/main/default/objects/Account/fields/NAF_3_Label__c.field-meta.xml
<CustomField>
    <fullName>NAF_3_Label__c</fullName>
    <formula>Industry_Code__r.NAF_3__r.NAF_3_Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NAF 3 Label</label>
    <type>Text</type>
</CustomField>