unpackaged/main/default/objects/Account/fields/National_ID__c.field-meta.xml
<CustomField>
    <fullName>National_ID__c</fullName>
    <description>National ID of the account. For France it's the SIRET</description>
    <inlineHelpText>Registration number of the company with the authorities of the country where it is located. For example, for France, this is the Siret and for Spain the CIF.</inlineHelpText>
    <label>National ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>