unpackaged/main/default/objects/Account/fields/National_ID_Active__c.field-meta.xml
<CustomField>
    <fullName>National_ID_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>National ID Active</label>
    <type>Checkbox</type>
</CustomField>