unpackaged/main/default/objects/Account/fields/National_ID_Exception__c.field-meta.xml
<CustomField>
    <fullName>National_ID_Exception__c</fullName>
    <label>National ID or Tax Number exception</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>National_ID_Exception</valueSetName>
    </valueSet>
</CustomField>