unpackaged/main/default/objects/Account/fields/National_ID_Status__c.field-meta.xml
<CustomField>
    <fullName>National_ID_Status__c</fullName>
    <formula>IF(National_ID_Active__c, IMAGE("/servlet/servlet.FileDownload?file=" &amp; $Label.IMG_Green,"Green",20,20), 
IMAGE("/servlet/servlet.FileDownload?file=" &amp; $Label.IMG_Red,"Red",20,20))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>National ID Status</label>
    <type>Text</type>
</CustomField>