unpackaged/main/default/objects/Account/fields/NB_USER_AND_NAF__c.field-meta.xml
<CustomField>
    <fullName>NB_USER_AND_NAF__c</fullName>
    <label>NB USER AND NAF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>