unpackaged/main/default/objects/Account/fields/Network_Linked__c.field-meta.xml
<CustomField>
    <fullName>Network_Linked__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Network Linked</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type__c</field>
            <operation>equals</operation>
            <value>Influencing Organization</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Linked to Network)</relationshipLabel>
    <relationshipName>AccountsLinkedToNetwork</relationshipName>
    <type>Lookup</type>
</CustomField>