unpackaged/main/default/objects/Account/fields/No_Business__c.field-meta.xml
<CustomField>
    <fullName>No_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to flag accounts with no business interest. The flagged accounts are not visible by IC.</description>
    <label>No Business</label>
    <type>Checkbox</type>
</CustomField>