unpackaged/main/default/objects/Account/fields/No_Communication_To_Users__c.field-meta.xml
<CustomField>
    <fullName>No_Communication_To_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Communication To Users</label>
    <type>Checkbox</type>
</CustomField>