unpackaged/main/default/objects/Account/fields/No_of_companies__c.field-meta.xml
<CustomField>
    <fullName>No_of_companies__c</fullName>
    <description>Number of companies</description>
    <label>No. of companies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>