unpackaged/main/default/objects/Account/fields/No_of_establishments__c.field-meta.xml
<CustomField>
    <fullName>No_of_establishments__c</fullName>
    <description>Number of establishments</description>
    <label>No. of Establishments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>