unpackaged/main/default/objects/Account/fields/No_of_Folders__c.field-meta.xml
<CustomField>
    <fullName>No_of_Folders__c</fullName>
    <label>No. of Folders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>