unpackaged/main/default/objects/Account/fields/No_of_POS__c.field-meta.xml
<CustomField>
    <fullName>No_of_POS__c</fullName>
    <label>No. of POS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>