unpackaged/main/default/objects/Account/fields/No_of_Stores__c.field-meta.xml
<CustomField>
    <fullName>No_of_Stores__c</fullName>
    <inlineHelpText>For Prospect Accounts, total number of stores of the brand. For Customer Accounts, number of stores with a Cegid Retail Solution.</inlineHelpText>
    <label>No. of Stores</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>