unpackaged/main/default/objects/Account/fields/No_of_Subsidiaries__c.field-meta.xml
<CustomField>
    <fullName>No_of_Subsidiaries__c</fullName>
    <description>No. of Subsidiaries</description>
    <label>No. of Subsidiaries</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>