unpackaged/main/default/objects/Account/fields/No_of_TPEs_connected__c.field-meta.xml
<CustomField>
    <fullName>No_of_TPEs_connected__c</fullName>
    <label>No. of TPEs connected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>