unpackaged/main/default/objects/Account/fields/No_of_Users_compta_box__c.field-meta.xml
<CustomField>
    <fullName>No_of_Users_compta_box__c</fullName>
    <label>No. of Users compta/ box</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>