unpackaged/main/default/objects/Account/fields/Number_of_companies__c.field-meta.xml
<CustomField>
    <fullName>Number_of_companies__c</fullName>
    <description>Number of companies</description>
    <label>Old Number of companies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>