unpackaged/main/default/objects/Account/fields/Number_of_establishments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_establishments__c</fullName>
    <description>Number of establishments</description>
    <label>Old Number of establishments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>