unpackaged/main/default/objects/Account/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Numéro de bon de commande</description>
    <label>Purchase Order</label>
    <type>Checkbox</type>
</CustomField>