unpackaged/main/default/objects/Account/fields/Parent_Account_Nature__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Nature__c</fullName>
    <formula>TEXT(Parent.Nature__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account Nature</label>
    <type>Text</type>
</CustomField>