unpackaged/main/default/objects/Account/fields/Partnership__c.field-meta.xml
<CustomField>
    <fullName>Partnership__c</fullName>
    <inlineHelpText>A Reseller is a nonretail company that resells a vendor’s products.

Independent software vendors are companies or individuals that build, develop and sell software products to consumers and/or businesses, often indirectly via distributors and Resellers through the Channel.

A Systems Integrator is a company that builds and markets a complex solution using products and/or components form other compagnie, selling the solution and the service required to install it under its own name.</inlineHelpText>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Partnership</valueSetName>
    </valueSet>
</CustomField>