unpackaged/main/default/objects/Account/fields/Pay_Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>Pay_Acquisition_Date__c</fullName>
    <description>Pay Acquisition Date</description>
    <label>Pay Acquisition Date</label>
    <type>Date</type>
</CustomField>