unpackaged/main/default/objects/Account/fields/Pay_Editor__c.field-meta.xml
<CustomField>
    <fullName>Pay_Editor__c</fullName>
    <description>Pay Editor</description>
    <label>Pay Editor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADP</fullName>
            </value>
            <value>
                <fullName>Cegedim</fullName>
            </value>
            <value>
                <fullName>Cegid</fullName>
            </value>
            <value>
                <fullName>Meta4</fullName>
            </value>
            <value>
                <fullName>Nibelis</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Sage</fullName>
            </value>
            <value>
                <fullName>Silae</fullName>
            </value>
            <value>
                <fullName>Sopra</fullName>
            </value>
            <value>
                <fullName>Talentia</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>