unpackaged/main/default/objects/Account/fields/Payslips_per_month__c.field-meta.xml
<CustomField>
    <fullName>Payslips_per_month__c</fullName>
    <description>Payslips per month</description>
    <label>Payslips per month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>