unpackaged/main/default/objects/Account/fields/PO_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>PO_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Purchase Order madatory for this account.</inlineHelpText>
    <label>PO Mandatory</label>
    <type>Checkbox</type>
</CustomField>