unpackaged/main/default/objects/Account/fields/POMandatory__c.field-meta.xml
<CustomField>
    <fullName>POMandatory__c</fullName>
    <label>PO Mandatory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>