unpackaged/main/default/objects/Account/fields/Prescriber__c.field-meta.xml
<CustomField>
    <fullName>Prescriber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prescriber</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts as Prescriber</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>