unpackaged/main/default/objects/Account/fields/Project_team_maturity__c.field-meta.xml
<CustomField>
    <fullName>Project_team_maturity__c</fullName>
    <label>Project team maturity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mood</valueSetName>
    </valueSet>
</CustomField>