unpackaged/main/default/objects/Account/fields/Public_Administration__c.field-meta.xml
<CustomField>
    <fullName>Public_Administration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To select an account as a public account</description>
    <label>Public Administration</label>
    <type>Checkbox</type>
</CustomField>