unpackaged/main/default/objects/Account/fields/Reason_Update_National_Id_VAT__c.field-meta.xml
<CustomField>
    <fullName>Reason_Update_National_Id_VAT__c</fullName>
    <label>Reason update National ID or Tax Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Input Error</fullName>
            </value>
            <value>
                <fullName>Change of address</fullName>
            </value>
            <value>
                <fullName>Legal merge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>