unpackaged/main/default/objects/Account/fields/Reasonforclosing__c.field-meta.xml
<CustomField>
    <fullName>Reasonforclosing__c</fullName>
    <label>Reason for closing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cessation of activity</fullName>
            </value>
            <value>
                <fullName>Early dissolution</fullName>
            </value>
            <value>
                <fullName>Legal liquidation</fullName>
            </value>
            <value>
                <fullName>Inactive company</fullName>
            </value>
            <value>
                <fullName>Company being acquired</fullName>
            </value>
            <value>
                <fullName>Conveyance of property</fullName>
            </value>
            <value>
                <fullName>Duplicate account</fullName>
            </value>
            <value>
                <fullName>Out of Scope</fullName>
            </value>
            <value>
                <fullName>Non compliant Account</fullName>
            </value>
            <value>
                <fullName>Invalid National Id</fullName>
            </value>
            <value>
                <fullName>National ID Inactive</fullName>
                <isActive>false</isActive>
                <label>National ID Inactive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>