unpackaged/main/default/objects/Account/fields/ReferentCode__c.field-meta.xml
<CustomField>
    <fullName>ReferentCode__c</fullName>
    <label>Referent Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>