unpackaged/main/default/objects/Account/fields/Referral_Customer__c.field-meta.xml
<CustomField>
    <fullName>Referral_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referral Customer</label>
    <type>Checkbox</type>
</CustomField>