unpackaged/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auvergne-Rhône-Alpes</fullName>
            </value>
            <value>
                <fullName>Bourgogne-Franche-Comté</fullName>
            </value>
            <value>
                <fullName>Bretagne</fullName>
            </value>
            <value>
                <fullName>Centre-Val de Loire</fullName>
            </value>
            <value>
                <fullName>Corse</fullName>
            </value>
            <value>
                <fullName>Grand Est</fullName>
            </value>
            <value>
                <fullName>Guadeloupe</fullName>
            </value>
            <value>
                <fullName>Guyane</fullName>
            </value>
            <value>
                <fullName>Hauts-de-France</fullName>
            </value>
            <value>
                <fullName>Île-de-France</fullName>
            </value>
            <value>
                <fullName>La Réunion</fullName>
            </value>
            <value>
                <fullName>Martinique</fullName>
            </value>
            <value>
                <fullName>Mayotte</fullName>
            </value>
            <value>
                <fullName>Normandie</fullName>
            </value>
            <value>
                <fullName>Nouvelle-Aquitaine</fullName>
            </value>
            <value>
                <fullName>Occitanie</fullName>
            </value>
            <value>
                <fullName>Pays de la Loire</fullName>
            </value>
            <value>
                <fullName>Provence-Alpes-Côte d'Azur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>