unpackaged/main/default/objects/Account/fields/RegisteredwiththeOrderofCharteredA__c.field-meta.xml
<CustomField>
    <fullName>RegisteredwiththeOrderofCharteredA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order of Chartered Accounts Registered</label>
    <type>Checkbox</type>
</CustomField>