unpackaged/main/default/objects/Account/fields/Retail_Sector__c.field-meta.xml
<CustomField>
    <fullName>Retail_Sector__c</fullName>
    <label>Retail Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Retail_Sector</valueSetName>
    </valueSet>
</CustomField>