unpackaged/main/default/objects/Account/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <label>Risk Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>