unpackaged/main/default/objects/Account/fields/Risk_of_Churn_Comment__c.field-meta.xml
<CustomField>
    <fullName>Risk_of_Churn_Comment__c</fullName>
    <inlineHelpText>For any update of Risk of Churn, please add a comment with the date of modification and the reason of the update, without deleting the comments already present</inlineHelpText>
    <label>Risk of Churn Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>