unpackaged/main/default/objects/Account/fields/Sales_relationship__c.field-meta.xml
<CustomField>
    <fullName>Sales_relationship__c</fullName>
    <label>Sales relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Newlogo</fullName>
            </value>
            <value>
                <fullName>Installed base</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>