unpackaged/main/default/objects/Account/fields/School_Level__c.field-meta.xml
<CustomField>
    <fullName>School_Level__c</fullName>
    <label>School Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BAC PRO</fullName>
            </value>
            <value>
                <fullName>BAC PRO services</fullName>
            </value>
            <value>
                <fullName>BEP</fullName>
            </value>
            <value>
                <fullName>BTS</fullName>
            </value>
            <value>
                <fullName>BTS CG</fullName>
            </value>
            <value>
                <fullName>BTS GPME</fullName>
            </value>
            <value>
                <fullName>BTS Industriels</fullName>
            </value>
            <value>
                <fullName>BTS NDRC</fullName>
            </value>
            <value>
                <fullName>BTS SAM</fullName>
            </value>
            <value>
                <fullName>BTS Tertiaires</fullName>
            </value>
            <value>
                <fullName>BTS commerce international</fullName>
            </value>
            <value>
                <fullName>BTS hotellerie-restauration</fullName>
            </value>
            <value>
                <fullName>BTSMCO</fullName>
            </value>
            <value>
                <fullName>Bac</fullName>
            </value>
            <value>
                <fullName>Bac + 2</fullName>
            </value>
            <value>
                <fullName>Bac + 3</fullName>
            </value>
            <value>
                <fullName>Bac + 4</fullName>
            </value>
            <value>
                <fullName>Bac + 5 et +</fullName>
            </value>
            <value>
                <fullName>Bac Hôtellerie Restauration</fullName>
            </value>
            <value>
                <fullName>Bac STMG</fullName>
            </value>
            <value>
                <fullName>Bac pro ARCU</fullName>
            </value>
            <value>
                <fullName>Bac pro GA</fullName>
            </value>
            <value>
                <fullName>CAP</fullName>
            </value>
            <value>
                <fullName>DCG</fullName>
            </value>
            <value>
                <fullName>DSCG</fullName>
            </value>
            <value>
                <fullName>DUT</fullName>
            </value>
            <value>
                <fullName>DUT GEA</fullName>
            </value>
            <value>
                <fullName>DUT GLT</fullName>
            </value>
            <value>
                <fullName>DUT QUO</fullName>
            </value>
            <value>
                <fullName>Dut QLIO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>